--- a/view_registration.html
+++ b/view_registration.html
@@ -32,6 +32,7 @@
                     <li><a class="links" href="view_categories.html">Categoria4</a></li>
                     <li><a class="links" href="view_categories.html">Categoria5</a></li>
                     <li><a class="links" href="view_categories.html">Categoria6</a></li>
+                    <li><a class="links" href="view_categories.html">Categoria7</a></li>
                 </ul>
                 <p><strong>Explorar</strong></p>
                 <ul>
@@ -44,8 +45,7 @@
                     <h2>Registrarte</h2>
                     <form action="" method="post">
                         <label>Nombre:<input type="text" name="nombre" id="nombre"></label>
-                        <label>E-mail:<input type="email" name="email" id="email"></label>
-                        <label>Telefono:<input type="tel" name="tele" id="tele"></label>
+                        <label>Correo electronico:<input type="email" name="email" id="email"></label>
                         <label>Contraseña:<input type="password" name="pass" id="pass"></label>
                         <label>Repita contraseña:<input type="password" name="pass2" id="pass2">
                         <input type="submit" value="regirtarse" name="submit">
