--- a/view_image.html
+++ b/view_image.html
@@ -34,6 +34,7 @@
                     <li><a class="links" href="view_categories.html">Categoria4</a></li>
                     <li><a class="links" href="view_categories.html">Categoria5</a></li>
                     <li><a class="links" href="view_categories.html">Categoria6</a></li>
+                    <li><a class="links" href="view_categories.html">Categoria7</a></li>
                 </ul>
                 <p><strong>Explorar</strong></p>
                 <ul>
