--- a/view_image.html
+++ b/view_image.html
@@ -80,6 +80,9 @@
                         <div class="col-1x1">
                             <img src="imgs/basico.png" alt="imagen">
                         </div>
+                        <div class="col-1x1">
+                            <img src="imgs/basico.png" alt="imagen">
+                        </div>
                     </div>
                 </section>
             </article>
