--- a/view_categories.html
+++ b/view_categories.html
@@ -12,6 +12,7 @@
             </div>
             <div class="title">
                 <h1>Fondos para todos</h1>
+                <h2>caca</h2>
             </div>
             <div class="options">
                 <a class="links" href="view_registration.html">Registrate</a>
