--- a/view_categories.html
+++ b/view_categories.html
@@ -13,6 +13,7 @@
             <div class="title">
                 <h1>Fondos para todos</h1>
                 <h2>caca</h2>
+                <h3>dani</h3>
             </div>
             <div class="options">
                 <a class="links" href="view_registration.html">Registrate</a>
