--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <div class="options">
                 <a class="links" href="view_registration.html">Registrate</a>
                 <a class="links" href="view_profile.html">Iniciar sesión</a>
+                <a class="links" href="view_profile.html">Iniciar</a>
                 <div class="search">
                     <form action="">
                         <input type="search" name="query" placeholder="Buscar...">
