--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </header>
         <div class="body">
             <nav class="left-nav">
-                <p><strong>Categorias</strong></p>
+                <p><strong>Cambio</strong></p>
                 <ul>
                     <li><a class="links" href="view_categories.html">Categoria1</a></li>
                     <li><a class="links" href="view_categories.html">Categoria2</a></li>
