--- a/index.html
+++ b/index.html
@@ -1,105 +1,120 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Fondos para todos</title>
-        <meta http-equiv="Contect-Type" content="text/html; charset=UTF-8">
-        <link rel="stylesheet" href="styles.css">
-    </head>
-    <body>
-        <header class="header">
-            <div class="logotipo">
-                <a href="index.html"><img class="logo" src="imgs/logo.png" alt="logo"></a>
+
+<head>
+  <title>Fondos para todos</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="Contect-Type" content="text/html; charset=UTF-8">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+    integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+  <link rel="stylesheet" href="styles.css">
+  <script src="scripts.js"></script>
+</head>
+
+<body>
+  <header class="header">
+    <div class="logotipo">
+      <a href="index.html"><img class="logo" src="imgs/logo.png" alt="logo"></a>
+    </div>
+    <div class="title">
+      <h1>Wallpaper house</h1>
+    </div>
+    <div class="options">
+      <a class="links" href="view_registration.html">Registrate</a>
+      <a class="links" href="view_profile.html">Iniciar sesión</a>
+      <div class="search">
+        <form class="form-inline" action="">
+          <input class="form-control" type="search" name="query" placeholder="Buscar...">
+          <input class="btn btn-success" type="submit" value="buscar">
+        </form>
+      </div>
+    </div>
+  </header>
+  <div class="body">
+    <nav class="my-nav">
+      <ul class="nav flex-column">
+        <li class="nav-item"><a class="nav-link active" href="view_categories.html">Fondos recientes</a></li>
+        <li class="nav-item"><a class="nav-link active" href="view_categories.html">Fondos detacados</a></li>
+        <li class="nav-item"><a class="nav-link active" href="view_categories.html">Animales</a></li>
+        <li class="nav-item"><a class="nav-link active" href="view_categories.html">Paisaje</a></li>
+        <li class="nav-item"><a class="nav-link active" href="view_categories.html">Universo</a></li>
+        <li class="nav-item"><a class="nav-link active" href="view_categories.html">Cuidades</a></li>
+        <li class="nav-item"><a class="nav-link active" href="view_categories.html">Fútbol</a></li>
+        <li class="nav-item"><a class="nav-link active" href="view_categories.html">Baloncesto</a></li>
+        <li class="nav-item"><a class="nav-link active" href="view_categories.html">Tenis</a></li>
+        <li class="nav-item"><a class="nav-link active" href="view_categories.html">Coches</a></li>
+        <li class="nav-item"><a class="nav-link active" href="view_categories.html">Motos</a></li>
+        <li class="nav-item"><a class="nav-link active" href="view_categories.html">Aviación</a></li>
+      </ul>
+    </nav>
+    <article class="article">
+      <section class="destacados">
+        <div class="container">
+          <h2>Imagenes detacadas</h2>
+          <div class="row">
+            <div class="col-4">
+              <img src="imgs/basico.png" alt="imagen">
             </div>
-            <div class="title">
-                <h1>Fondos para todos</h1>
+            <div class="col-4">
+              <img src="imgs/basico.png" alt="imagen">
             </div>
-            <div class="options">
-                <a class="links" href="view_registration.html">Registrate</a>
-                <a class="links" href="view_profile.html">Iniciar sesión</a>
-                <a class="links" href="view_profile.html">Iniciar sesión</a>
-                <div class="search">
-                    <form action="">
-                        <input type="search" name="query" placeholder="Buscar...">
-                        <input type="submit" value="buscar">
-                    </form>
-                </div>
+            <div class="col-4">
+              <img src="imgs/basico.png" alt="imagen">
             </div>
-        </header>
-        <div class="body">
-            <nav class="left-nav">
-                <p><strong>Categorias</strong></p>
-                <ul>
-                    <li><a class="links" href="view_categories.html">Categoria1</a></li>
-                    <li><a class="links" href="view_categories.html">Categoria2</a></li>
-                    <li><a class="links" href="view_categories.html">Categoria3</a></li>
-                    <li><a class="links" href="view_categories.html">Categoria4</a></li>
-                    <li><a class="links" href="view_categories.html">Categoria5</a></li>
-                    <li><a class="links" href="view_categories.html">Categoria6</a></li>
-                    <li><a class="links" href="view_categories.html">Categoria7</a></li>
-                </ul>
-                <p><strong>Explorar</strong></p>
-                <ul>
-                    <li><a class="links" href="view_categories.html">Fondos recientes</a></li>
-                    <li><a class="links" href="view_categories.html">Fondos detacados</a></li>
-                </ul>
-            </nav>
-            <article class="article">
-                <section class="destacados">
-                    <h2>Imagenes detacadas</h2>
-                    <div class="row">
-                        <div class="col-1x1">
-                            <img src="imgs/basico.png" alt="imagen">
-                        </div>
-                        <div class="col-1x1">
-                            <img src="imgs/basico.png" alt="imagen">
-                        </div>
-                        <div class="col-1x1">
-                            <img src="imgs/basico.png" alt="imagen">
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-1x1">
-                            <img src="imgs/basico.png" alt="imagen">
-                        </div>
-                        <div class="col-1x1">
-                            <img src="imgs/basico.png" alt="imagen">
-                        </div>
-                        <div class="col-1x1">
-                            <img src="imgs/basico.png" alt="imagen">
-                        </div>
-                    </div>
-                </section>
-                <section class="recientes">
-                    <h2>Imagenes recientes</h2>
-                    <div class="row">
-                        <div class="col-1x1">
-                            <img src="imgs/basico.png" alt="imagen">
-                        </div>
-                        <div class="col-1x1">
-                            <img src="imgs/basico.png" alt="imagen">
-                        </div>
-                        <div class="col-1x1">
-                            <img src="imgs/basico.png" alt="imagen">
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-1x1">
-                            <img src="imgs/basico.png" alt="imagen">
-                        </div>
-                        <div class="col-1x1">
-                            <img src="imgs/basico.png" alt="imagen">
-                        </div>
-                        <div class="col-1x1">
-                            <img src="imgs/basico.png" alt="imagen">
-                        </div>
-                    </div>
-                </section>
-            </article>
+          </div>
+          <div class="row">
+            <div class="col-4">
+              <img src="imgs/basico.png" alt="imagen">
+            </div>
+            <div class="col-4">
+              <img src="imgs/basico.png" alt="imagen">
+            </div>
+            <div class="col-4">
+              <img src="imgs/basico.png" alt="imagen">
+            </div>
+          </div>
         </div>
-        <footer class="footer">
-                <a class="links" href="#">¿Quienes somos?</a>
-                <a class="links" href="#">Contata con nosotros</a>
-                <a class="links" href="#">Politica de privacidad</a>
-        </footer>
-    </body>
+      </section>
+      <section class="recientes">
+        <div class="container">
+          <h2>Imagenes recientes</h2>
+          <div class="row">
+            <div class="col-4">
+              <img src="imgs/basico.png" alt="imagen">
+            </div>
+            <div class="col-4">
+              <img src="imgs/basico.png" alt="imagen">
+            </div>
+            <div class="col-4">
+              <img src="imgs/basico.png" alt="imagen">
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-4">
+              <img src="imgs/basico.png" alt="imagen">
+            </div>
+            <div class="col-4">
+              <img src="imgs/basico.png" alt="imagen">
+            </div>
+            <div class="col-4">
+              <img src="imgs/basico.png" alt="imagen">
+            </div>
+          </div>
+        </div>
+      </section>
+    </article>
+  </div>
+  <footer class="footer">
+    <a class="links" href="#">¿Quienes somos?</a>
+    <a class="links" href="#">Contata con nosotros</a>
+    <a class="links" href="#">Politica de privacidad</a>
+  </footer>
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
+    crossorigin="anonymous"></script>
+</body>
+
 </html>
