--- a/index.html
+++ b/index.html
@@ -33,18 +33,42 @@
   <div class="body">
     <nav class="my-nav">
       <ul class="nav flex-column">
-        <li class="nav-item"><a class="nav-link active" href="view_categories.html">Fondos recientes</a></li>
-        <li class="nav-item"><a class="nav-link active" href="view_categories.html">Fondos detacados</a></li>
-        <li class="nav-item"><a class="nav-link active" href="view_categories.html">Animales</a></li>
-        <li class="nav-item"><a class="nav-link active" href="view_categories.html">Paisaje</a></li>
-        <li class="nav-item"><a class="nav-link active" href="view_categories.html">Universo</a></li>
-        <li class="nav-item"><a class="nav-link active" href="view_categories.html">Cuidades</a></li>
-        <li class="nav-item"><a class="nav-link active" href="view_categories.html">Fútbol</a></li>
-        <li class="nav-item"><a class="nav-link active" href="view_categories.html">Baloncesto</a></li>
-        <li class="nav-item"><a class="nav-link active" href="view_categories.html">Tenis</a></li>
-        <li class="nav-item"><a class="nav-link active" href="view_categories.html">Coches</a></li>
-        <li class="nav-item"><a class="nav-link active" href="view_categories.html">Motos</a></li>
-        <li class="nav-item"><a class="nav-link active" href="view_categories.html">Aviación</a></li>
+        <li class="nav-item">
+          <a class="nav-link active" href="view_categories.html">Fondos recientes</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" href="view_categories.html">Fondos detacados</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" href="view_categories.html">Animales</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" href="view_categories.html">Paisaje</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" href="view_categories.html">Universo</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" href="view_categories.html">Cuidades</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" href="view_categories.html">Fútbol</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" href="view_categories.html">Baloncesto</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" href="view_categories.html">Tenis</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" href="view_categories.html">Coches</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" href="view_categories.html">Motos</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" href="view_categories.html">Aviación</a>
+        </li>
       </ul>
     </nav>
     <article class="article">
