--- a/view_profile.html
+++ b/view_profile.html
@@ -29,24 +29,44 @@
     </div>
   </header>
   <div class="body">
-    <nav class="left-nav">
-      <p><strong>Categorias</strong></p>
-      <ul class="list-group list-group-flush">
-        <li><a class="links" href="view_categories.html">Animales</a></li>
-        <li><a class="links" href="view_categories.html">Paisaje</a></li>
-        <li><a class="links" href="view_categories.html">Universo</a></li>
-        <li><a class="links" href="view_categories.html">Cuidades</a></li>
-        <li><a class="links" href="view_categories.html">Fútbol</a></li>
-        <li><a class="links" href="view_categories.html">Baloncesto</a></li>
-        <li><a class="links" href="view_categories.html">Tenis</a></li>
-        <li><a class="links" href="view_categories.html">Coches</a></li>
-        <li><a class="links" href="view_categories.html">Motos</a></li>
-        <li><a class="links" href="view_categories.html">Aviación</a></li>
-      </ul>
-      <p><strong>Explorar</strong></p>
-      <ul>
-        <li><a class="links" href="view_categories.html">Fondos recientes</a></li>
-        <li><a class="links" href="view_categories.html">Fondos detacados</a></li>
+    <nav class="my-nav">
+      <ul class="nav flex-column">
+        <li class="nav-item">
+          <a class="nav-link active" href="view_categories.html">Fondos recientes</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" href="view_categories.html">Fondos detacados</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" href="view_categories.html">Animales</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" href="view_categories.html">Paisaje</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" href="view_categories.html">Universo</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" href="view_categories.html">Cuidades</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" href="view_categories.html">Fútbol</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" href="view_categories.html">Baloncesto</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" href="view_categories.html">Tenis</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" href="view_categories.html">Coches</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" href="view_categories.html">Motos</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" href="view_categories.html">Aviación</a>
+        </li>
       </ul>
     </nav>
     <article class="article">
