--- a/view_profile.html
+++ b/view_profile.html
@@ -27,6 +27,9 @@
         </form>
       </div>
     </div>
+    <div class="menu-hidden">
+      <button>Menu</button>
+    </div>
   </header>
   <div class="body">
     <nav class="my-nav">
@@ -71,17 +74,17 @@
     </nav>
     <article class="article">
       <section class="perfil">
-        <div class="container">
+        <div class="container-fluid">
           <div class="row">
             <div class="col-3">
               <img class="logo" src="imgs/profile.png" alt="imagen">
             </div>
-            <div class="col-4">
+            <div class="col-6">
               <p>Nombre usuario</p>
               <p>Correo</p>
               <p>Teléfono</p>
             </div>
-            <div class="col-20">
+            <div class="col-3">
               <div class="upload">
                 <form action="">
                   <input type="file" hidden>
@@ -93,7 +96,7 @@
         </div>
       </section>
       <section class="destacados">
-        <div class="container">
+        <div class="container-fluid">
           <h2>Imagenes favoritas</h2>
           <div class="row">
             <div class="col-1">
@@ -125,7 +128,7 @@
         </div>
       </section>
       <section class="recientes">
-        <div class="container">
+        <div class="container-fluid">
           <h2>Mis imagenes</h2>
           <div class="row">
             <div class="col-1">
