--- a/view_registration.html
+++ b/view_registration.html
@@ -29,6 +29,9 @@
         </form>
       </div>
     </div>
+    <div class="menu-hidden">
+      <button>Menu</button>
+    </div>
   </header>
   <div class="body">
     <nav class="my-nav">
