--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
         </form>
       </div>
     </div>
+    <div class="menu-hidden float-left">
+      <img src="/imgs/menu-regular-24.png" alt="menu">
+    </div>
   </header>
   <div class="body">
     <nav class="my-nav">
@@ -73,7 +76,7 @@
     </nav>
     <article class="article">
       <section class="destacados">
-        <div class="container">
+        <div class="container-fluid">
           <h2>Imagenes detacadas</h2>
           <div class="row">
             <div class="col-4">
@@ -100,7 +103,7 @@
         </div>
       </section>
       <section class="recientes">
-        <div class="container">
+        <div class="container-fluid">
           <h2>Imagenes recientes</h2>
           <div class="row">
             <div class="col-4">
