--- a/view_categories.html
+++ b/view_categories.html
@@ -29,6 +29,9 @@
         </form>
       </div>
     </div>
+    <div class="menu-hidden">
+      <button>Menu</button>
+    </div>
   </header>
   <div class="body">
     <nav class="my-nav">
@@ -73,7 +76,7 @@
     </nav>
     <article class="article">
       <section class="destacados">
-        <div class="container">
+        <div class="container-fluid">
           <h2>Categoria</h2>
           <div class="row">
             <div class="col-4">
