--- a/view_image.html
+++ b/view_image.html
@@ -29,6 +29,9 @@
         </form>
       </div>
     </div>
+    <div class="menu-hidden">
+      <button>Menu</button>
+    </div>
   </header>
   <div class="body">
     <nav class="my-nav">
@@ -73,7 +76,7 @@
     </nav>
     <article class="article">
       <section class="destacados">
-        <div class="container">
+        <div class="container-fluid">
           <div class="row justify-content-center">
             <div class="imagen">
               <img src="imgs/basico.png" alt="imagen">
