--- a/index.html
+++ b/index.html
@@ -5,10 +5,8 @@
   <title>Fondos para todos</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="Contect-Type" content="text/html; charset=UTF-8">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-    integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="styles.css">
-  <!-- <script type="text/javascript" src="content/backgrounds.json"></script> -->
 </head>
 
 <body>
@@ -90,25 +88,7 @@
       <section class="destacados">
         <div class="container-fluid">
           <h2>Imagenes detacadas</h2>
-          <div class="row">
-            <div class="col-4 responsive">
-              <img src="imgs/basico.png" alt="imagen">
-            </div>
-            <div class="col-4 responsive">
-              <img src="imgs/basico.png" alt="imagen">
-            </div>
-            <div class="col-4 responsive">
-              <img src="imgs/basico.png" alt="imagen">
-            </div>
-            <div class="col-4 responsive">
-              <img src="imgs/basico.png" alt="imagen">
-            </div>
-            <div class="col-4 responsive">
-              <img src="imgs/basico.png" alt="imagen">
-            </div>
-            <div class="col-4 responsive">
-              <img src="imgs/basico.png" alt="imagen">
-            </div>
+          <div class="row rellenar">
           </div>
           <div class="row justify-content-end pr-3">
             <a class="" href="">Ver todas &raquo</a>
