--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
       <section class="destacados">
         <div class="container-fluid">
           <h2>Imagenes detacadas</h2>
-          <div class="row rellenar">
+          <div class="row rellenarDestacadas">
           </div>
           <div class="row justify-content-end pr-3">
             <a class="" href="">Ver todas &raquo</a>
@@ -98,25 +98,7 @@
       <section class="recientes">
         <div class="container-fluid">
           <h2>Imagenes recientes</h2>
-          <div class="row">
-            <div class="col-4 responsive">
-              <img src="imgs/basico.png" alt="imagen">
-            </div>
-            <div class="col-4 responsive">
-              <img src="imgs/basico.png" alt="imagen">
-            </div>
-            <div class="col-4 responsive">
-              <img src="imgs/basico.png" alt="imagen">
-            </div>
-            <div class="col-4 responsive">
-              <img src="imgs/basico.png" alt="imagen">
-            </div>
-            <div class="col-4 responsive">
-              <img src="imgs/basico.png" alt="imagen">
-            </div>
-            <div class="col-4 responsive">
-              <img src="imgs/basico.png" alt="imagen">
-            </div>
+          <div class="row rellenarRecientes">
           </div>
           <div class="row justify-content-end pr-3">
             <a class="" href="">Ver todas &raquo</a>
