--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 
-<body>
+<body onload="updateImagesCategories()">
   <header class="header">
     <div class="logotipo">
       <a href="index.html"><img class="logo" src="imgs/logo.png" alt="logo"></a>
     </div>
     <div class="title">
-      <h1>Wallpapers house</h1>
+      <h1 onload="updateImagesCategories()">Wallpapers house</h1>
     </div>
     <div class="options">
       <div class="row">
